--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,33 +1,76 @@
-h1, img, div, h3, button, body{
-    color: blue;
-    text-align: center;
-    opacity: 1;
+h1, img, div, h3, button, body {
+	color: goldenrod;
+	text-align: center;
+	opacity: 1;
+	font-family: 'Josefin Sans', sans-serif;
+	font-weight: bolder;
 }
-body{
-	background: url(../images/background.png)fixed;
+
+body {
+	background: url(../images/background.png)no-repeat center center fixed; 
+	
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+
 }
-img{
+
+img {
 	border-radius: 35%;
 	height: 400px;
 	width: 400px;
+	border-left: 4px solid gold;
+	border-right: 4px solid gold;
 }
 
-h3:hover{
+h3:hover {
 	transform: scale(1.1);
-	background-color: purple;
+	background-color: 	#8f00bc;
 	color: white;
 	transition-duration: 0.8s;
-	cursor:pointer;
-
+	cursor: pointer;
 }
-section{
+
+section {
 	width: 70%;
-	border: 2px solid black;
+	border-radius: 15%;
 	margin: 0 auto;
-	background-color: white;
-	}
-h3{
+	background-color:#4c0062;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	border-left: 6px solid gold;
+	border-right: 6px solid gold;
+}
+
+h3, p {
 	width: 30%;
 	margin: 0 auto;
-	border-radius: 25%;
+	border-radius: 50%;
+	padding: 10px;
+	line-height: 35px;
+}
+
+h1 {
+	font-size: 45px;
+	padding: 25px;
+}
+
+button {
+	padding: 25px;
+	font-size: 20px;
+}
+
+#countdown {
+	padding: 35px;
+	font-size: 30px;
+}
+#warning, #instruct{
+	font-size: 30px;
+	line-height: 25px;
+}
+p{
+	padding-top: 25px;
 }
